[package]
name = "metasubst"
version = "0.1.0"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.0"

[dev-dependencies]
maplit = "1.0.0"
proptest = "0.9.0"